--- a/商品的布局切换Demo/Base.lproj/Main.storyboard
+++ b/商品的布局切换Demo/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="9VS-jz-wvg">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,67 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iLd-h2-9YD">
+                                <rect key="frame" x="99" y="129" width="178" height="30"/>
+                                <state key="normal" title="CollectionView布局的切换"/>
+                                <connections>
+                                    <action selector="onClickChangeTypeBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QnF-dT-DUS"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DnE-yV-VCR">
+                                <rect key="frame" x="99" y="193" width="178" height="30"/>
+                                <state key="normal" title="CollectionView的具体使用"/>
+                                <connections>
+                                    <action selector="onClickCollectionViewMethodBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Qms-qf-pbg"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RLJ-TW-WWk">
+                                <rect key="frame" x="91" y="255" width="193" height="30"/>
+                                <state key="normal" title="CollectionView流布局的使用"/>
+                                <connections>
+                                    <action selector="onClickCollectFlowBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Hfj-fp-sCL"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="iLd-h2-9YD" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="65" id="1xx-XA-6S9"/>
+                            <constraint firstItem="RLJ-TW-WWk" firstAttribute="top" secondItem="DnE-yV-VCR" secondAttribute="bottom" constant="32" id="3EG-yF-KBb"/>
+                            <constraint firstItem="DnE-yV-VCR" firstAttribute="top" secondItem="iLd-h2-9YD" secondAttribute="bottom" constant="34" id="I1C-cC-amq"/>
+                            <constraint firstItem="RLJ-TW-WWk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dZX-Cf-Uve"/>
+                            <constraint firstItem="DnE-yV-VCR" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="eXg-Vd-5j9"/>
+                            <constraint firstItem="iLd-h2-9YD" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="v6Y-jc-0Jh"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="98b-Ye-HX0"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="456.80000000000001" y="118.29085457271366"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="jJm-Wc-jAA">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9VS-jz-wvg" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="txm-UB-cwH">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Inb-2k-dEu"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ay9-6B-Lvh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-206" y="102"/>
         </scene>
     </scenes>
 </document>
